--- a/src/email/templates/templateCategory1.ejs
+++ b/src/email/templates/templateCategory1.ejs
@@ -3,6 +3,6 @@
     <h1>Hello <%= user.name %>,</h1>
     <p>This is your custom email template for category 1!</p>
     <p>Email: <%= user.email %></p>
-    <img src="https://excel-service-pg.onrender.com/tracking-pixel?name=<%= user.name %>&email=<%= user.email %>" alt="">
+    <img src="https://excel-service-pg.onrender.com/pixel/tracking-pixel?name=<%= user.name %>&email=<%= user.email %>" alt="">
   </body>
 </html>
